# lucaria_engine

./: .gitignore  CMakeLists.txt  README.md
addon/blender/: lucaria.py
cmake/: build_assets.cmake  build_game.cmake  build_game_android.cmake  build_game_psp.cmake  build_game_web.cmake  build_game_win32.cmake
include/lucaria/: lucaria.hpp
include/lucaria/backend/opengl/: backend_opengl.hpp  cubemap_opengl.hpp  framebuffer_opengl.hpp  mesh_opengl.hpp  program_opengl.hpp  renderbuffer_opengl.hpp  texture_opengl.hpp
include/lucaria/backend/pspgu/: cubemap_pspgu.hpp  framebuffer_pspgu.hpp  mesh_pspgu.hpp  program_pspgu.hpp  renderbuffer_pspgu.hpp  texture_pspgu.hpp
include/lucaria/common/: audio_data.hpp  event_track_data.hpp  geometry_data.hpp
include/lucaria/core/: animation.hpp  audio.hpp  collision.hpp  context.hpp  cubemap.hpp  database.hpp  error.hpp  event_track.hpp  fetch.hpp  font.hpp  framebuffer.hpp  geometry.hpp  image.hpp  input.hpp  key.hpp  math.hpp  mesh.hpp  motion_track.hpp  pixel.hpp  platform.hpp  program.hpp  renderbuffer.hpp  resource.hpp  run.hpp  scene.hpp  shader.hpp  shape.hpp  skeleton.hpp  sound.hpp  sound_track.hpp  stream.hpp  texture.hpp  window.hpp
include/lucaria/core/backend/opengl/: cubemap_opengl.hpp  framebuffer_opengl.hpp  mesh_opengl.hpp  program_opengl.hpp  renderbuffer_opengl.hpp  texture_opengl.hpp
include/lucaria/core/backend/pspgu/: backend_pspgu.hpp  cubemap_pspgu.hpp  framebuffer_pspgu.hpp  mesh_pspgu.hpp  program_pspgu.hpp  renderbuffer_pspgu.hpp  texture_pspgu.hpp
include/lucaria/core/platform/android/: window_android.hpp
include/lucaria/core/platform/glfw/: key_glfw.hpp  platform_glfw.hpp  window_glfw.hpp
include/lucaria/core/platform/web/: key_web.hpp  platform_web.hpp  window_web.hpp
include/lucaria/ecs/: animator.hpp  dynamics.hpp  interface.hpp  mixer.hpp  model.hpp  rendering.hpp  rigidbody.hpp  speaker.hpp  transform.hpp
include/lucaria/entity/: animator.hpp  dynamics.hpp  interface.hpp  mixer.hpp  model.hpp  rendering.hpp  speaker.hpp  transform.hpp
include/lucaria/public/: dynamics_context.hpp  fetch_context.hpp  game_context.hpp  input_context.hpp  mixer_context.hpp  object_context.hpp  rendering_context.hpp  scene_context.hpp
include/lucaria/system/: animator.hpp  mixer.hpp  rendering.hpp  rigidbody.hpp  speaker.hpp
source/client/: CMakeLists.txt
source/client/backend/opengl/: framebuffer_opengl.cpp  mesh_opengl.cpp  program_opengl.cpp  texture_opengl.cpp
source/client/core/: animation.cpp  audio.cpp  cubemap.cpp  database.cpp  error.cpp  event_track.cpp  fetch.cpp  font.cpp  framebuffer.cpp  geometry.cpp  image.cpp  input.cpp  math.cpp  mesh.cpp  motion_track.cpp  program.cpp  renderbuffer.cpp  run.cpp  shader.cpp  shape.cpp  skeleton.cpp  sound.cpp  sound_track.cpp  stream.cpp  texture.cpp  window.cpp
source/client/core/backend/opengl/: cubemap_opengl.cpp  framebuffer_opengl.cpp  program_opengl.cpp  renderbuffer_opengl.cpp  texture_opengl.cpp
source/client/core/backend/pspgu/: cubemap_pspgu.cpp  framebuffer_pspgu.cpp  mesh_pspgu.cpp  program_pspgu.cpp  renderbuffer_pspgu.cpp  texture_pspgu.cpp
source/client/core/platform/glfw/: window_glfw.cpp
source/client/core/platform/web/: window_web.cpp
source/client/ecs/: animator.cpp  dynamics.cpp  interface.cpp  mixer.cpp  model.cpp  motion.cpp  rendering.cpp  rigidbody.cpp  speaker.cpp  transform.cpp
source/client/entity/: animator.cpp  dynamics.cpp  interface.cpp  mixer.cpp  model.cpp  motion.cpp  rendering.cpp  rigidbody.cpp  speaker.cpp  transform.cpp
source/client/system/: animator.cpp  dynamics.cpp  interface.cpp  mixer.cpp  model.cpp  motion.cpp  rendering.cpp  rigidbody.cpp  speaker.cpp  transform.cpp
source/compiler/: CMakeLists.txt  main.cpp
source/compiler/export/: binary.cpp  binary.hpp
source/compiler/import/: assimp.cpp  assimp.hpp  json.cpp  json.hpp  stb.cpp  stb.hpp  text.cpp  text.hpp
source/compiler/tool/: etcpak.cpp  etcpak.hpp  gltf2ozz.cpp  gltf2ozz.hpp  oggenc.cpp  oggenc.hpp  woff2compress.cpp  woff2compress.hpp
source/game/: CMakeLists.txt
source/game/android/: build.gradle.kts  settings.gradle.kts
source/game/android/src/main/: AndroidManifest.xml
source/game/web/: shell.html
