
if(ANDROID OR WIN32 OR PSP)
    add_subdirectory(${LUCARIA_EXTERNAL_DIR}/alsoft ${CMAKE_CURRENT_BINARY_DIR}/external/alsoft)
endif()
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/bullet ${CMAKE_CURRENT_BINARY_DIR}/external/bullet)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/cereal ${CMAKE_CURRENT_BINARY_DIR}/external/cereal)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/entt ${CMAKE_CURRENT_BINARY_DIR}/external/entt)
if(WIN32)
    add_subdirectory(${LUCARIA_EXTERNAL_DIR}/glfw ${CMAKE_CURRENT_BINARY_DIR}/external/glfw)
endif()
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/glm ${CMAKE_CURRENT_BINARY_DIR}/external/glm)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/imgui ${CMAKE_CURRENT_BINARY_DIR}/external/imgui)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ogg ${CMAKE_CURRENT_BINARY_DIR}/external/ogg)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ozz ${CMAKE_CURRENT_BINARY_DIR}/external/ozz)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/stb ${CMAKE_CURRENT_BINARY_DIR}/external/stb)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/vorbis ${CMAKE_CURRENT_BINARY_DIR}/external/vorbis)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/woff ${CMAKE_CURRENT_BINARY_DIR}/external/woff)

file(GLOB_RECURSE lucaria_client_core_sources "core/*.cpp")
file(GLOB_RECURSE lucaria_client_ecs_sources "ecs/*.cpp")
add_library(lucaria_client STATIC ${lucaria_client_core_sources} ${lucaria_client_ecs_sources})
set_target_properties(lucaria_client PROPERTIES CXX_STANDARD 17)
target_compile_definitions(lucaria_client PUBLIC BT_NO_SIMD_OPERATOR_OVERLOADS) # ozz implements them already

if(ANDROID)
    set(NATIVE_APP_GLUE_DIR ${ANDROID_NDK}/sources/android/native_app_glue)
    add_library(android_native_app_glue STATIC ${NATIVE_APP_GLUE_DIR}/android_native_app_glue.c)
    target_include_directories(android_native_app_glue PUBLIC ${NATIVE_APP_GLUE_DIR})
    target_link_libraries(lucaria_client PUBLIC GLESv3 EGL android log android_native_app_glue)
endif()
if(ANDROID OR WIN32 OR PSP)
    target_link_libraries(lucaria_client PUBLIC lucaria_external_alsoft)
endif()
target_link_libraries(lucaria_client PUBLIC lucaria_external_bullet)
target_link_libraries(lucaria_client PUBLIC lucaria_external_cereal)
target_link_libraries(lucaria_client PUBLIC lucaria_external_entt)
target_link_libraries(lucaria_client PUBLIC lucaria_external_glm)
if(WIN32)
    target_link_libraries(lucaria_client PUBLIC lucaria_external_glfw)
endif()
target_link_libraries(lucaria_client PUBLIC lucaria_external_imgui)
target_link_libraries(lucaria_client PUBLIC lucaria_external_ozz)
target_link_libraries(lucaria_client PUBLIC lucaria_external_stb)
target_link_libraries(lucaria_client PUBLIC lucaria_external_vorbis)
target_link_libraries(lucaria_client PUBLIC lucaria_external_woff)

target_include_directories(lucaria_client PUBLIC ${LUCARIA_INCLUDE_DIR})

message("-- Configuring engine with generator: ${CMAKE_GENERATOR}")
message("-- Configuring engine with compiler: ${CMAKE_CXX_COMPILER_ID}")
message("-- Configuring engine with config: ${LUCARIA_CONFIG}")
target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_GENERATOR=${CMAKE_GENERATOR})
target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_COMPILER=${CMAKE_CXX_COMPILER_ID})
target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_CONFIG=${LUCARIA_CONFIG})
if(EMSCRIPTEN)
    message("-- Configuring engine with simd: SSE2 over WebAssembly 128-bit SIMD feature")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_SIMD=WASM128)
elseif(WIN32)
    message("-- Configuring engine with simd: SSE4.1")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_SIMD=SSE4.1)
elseif(ANDROID)
    message("-- Configuring engine with simd: NEON")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_SIMD=NEON)
else()
    message("-- Configuring engine with simd: OFF")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_SIMD=OFF)
endif()
if(LUCARIA_DEBUG)
    message("-- Configuring engine with guizmos: ON (Select config other than Debug to disable)")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_OPTION_GUIZMO=1)
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_CONFIG_DEBUG=1)
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_CONFIG_RELEASE=0)
else()
    message("-- Configuring engine with guizmos: OFF (Select Debug config to enable)")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_OPTION_GUIZMO=0)
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_CONFIG_DEBUG=0)
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_CONFIG_RELEASE=1)
endif()
if(LUCARIA_PACKAGE)
    message("-- Configuring engine with assets packaging: ON")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_OPTION_PACKAGE=1)
else()
    message("-- Configuring engine with assets packaging: OFF")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_OPTION_PACKAGE=0)
endif()

if(ANDROID)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_ANDROID=1)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_WEB=0)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_WIN32=0)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_PSP=0)
elseif(EMSCRIPTEN)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_ANDROID=0)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_WEB=1)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_WIN32=0)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_PSP=0)
elseif(WIN32)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_ANDROID=0)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_WEB=0)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_WIN32=1)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_PSP=0)
elseif(PSP)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_ANDROID=0)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_WEB=0)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_WIN32=0)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_PSP=1)
endif()

if(PSP)
	file(GLOB_RECURSE lucaria_client_pspgu_sources "backend/pspgu/*.cpp")
	target_sources(lucaria_client PRIVATE ${lucaria_client_pspgu_sources})
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_BACKEND_PSPGU=1)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_BACKEND_OPENGL=0)
else()
	file(GLOB_RECURSE lucaria_client_opengl_sources "backend/opengl/*.cpp")
	target_sources(lucaria_client PRIVATE ${lucaria_client_opengl_sources})
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_BACKEND_PSPGU=0)
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_BACKEND_OPENGL=1)
endif()

if(ANDROID)
    target_compile_options(lucaria_client PRIVATE -Wno-deprecated-declarations)
endif()
