add_subdirectory(${LUCARIA_EXTERNAL_DIR}/assimp ${CMAKE_CURRENT_BINARY_DIR}/external/assimp)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/cereal ${CMAKE_CURRENT_BINARY_DIR}/external/cereal)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/etcpak ${CMAKE_CURRENT_BINARY_DIR}/external/etcpak)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/glm ${CMAKE_CURRENT_BINARY_DIR}/external/glm)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ogg ${CMAKE_CURRENT_BINARY_DIR}/external/ogg)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ozz ${CMAKE_CURRENT_BINARY_DIR}/external/ozz)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/stb ${CMAKE_CURRENT_BINARY_DIR}/external/stb)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/vorbis ${CMAKE_CURRENT_BINARY_DIR}/external/vorbis)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/vorbistools ${CMAKE_CURRENT_BINARY_DIR}/external/vorbistools)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/woff ${CMAKE_CURRENT_BINARY_DIR}/external/woff)

file(GLOB_RECURSE lucaria_compiler_source "*.cpp")
add_executable(lucaria_compiler ${lucaria_compiler_source})
target_include_directories(lucaria_compiler PRIVATE "${LUCARIA_INCLUDE_DIR}")
set_target_properties(lucaria_compiler PROPERTIES CXX_STANDARD 17)

target_link_libraries(lucaria_compiler PRIVATE lucaria_external_assimp)
target_link_libraries(lucaria_compiler PRIVATE lucaria_external_cereal)
target_link_libraries(lucaria_compiler PRIVATE lucaria_external_glm)
target_link_libraries(lucaria_compiler PRIVATE lucaria_external_ozz)
target_link_libraries(lucaria_compiler PRIVATE lucaria_external_stb)

add_dependencies(lucaria_compiler lucaria_external_etcpak)
add_dependencies(lucaria_compiler lucaria_external_gltf2ozz)
add_dependencies(lucaria_compiler lucaria_external_oggenc)
add_dependencies(lucaria_compiler lucaria_external_woff2compress)
